# BCI-Agent-Bridge

./: .env.example  .env.production  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_GENERATION7_FINAL.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  FINAL_STATUS_REPORT.md  GENERATION9_AUTONOMOUS_COMPLETION_REPORT.md  GENERATION_10_AUTONOMOUS_COMPLETION_REPORT.md  GENERATION_4_AUTONOMOUS_COMPLETION.md  GENERATION_4_COMPLETION_REPORT.md  GENERATION_5_COMPLETION_REPORT.md  GENERATION_5_DEPLOYMENT_GUIDE.md  GENERATION_7_CONSCIOUSNESS_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT.md  README.md  VALIDATION_REPORT.md  autonomous_validation_report_1755691459.json  autonomous_validation_system.py  autonomous_validation_system_lite.py  compliance_validation.py  comprehensive_research_validation.py  comprehensive_validation.py  deploy.sh  deploy_generation10_global.py  deploy_generation7_consciousness.py  direct_compliance_test.py  docker-compose.generation5.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  generation10_global_deployment_report.md  generation10_validation.py  generation10_validation_report.json  generation5_quality_gates.py  metrics.db  performance_benchmark.json  performance_benchmark.py  pyproject.toml  quality_gates_report.json  (+10 more)
audit_logs/daily/: 2025-08-06.jsonl
audit_logs/integrity/: 2025-08-06.jsonl.sha256
deployment/: production_ready_check.py
docker/: Dockerfile  Dockerfile.generation5  Dockerfile.production  entrypoint.sh  healthcheck.sh
docs/: API.md  DEPLOYMENT.md  GENERATION_4_FEATURES.md  RESEARCH.md  RESEARCH_CONTRIBUTIONS.md
gdpr_compliance/consent/: records.json
gen10_env/: pyvenv.cfg
generation10_deployment_package/: deployment_manifest.json
generation10_deployment_package/monitoring/: generation10_dashboard.json  prometheus.yml
generation10_deployment_package/scripts/: deploy_docker.sh  deploy_k8s.sh  health_check.sh
generation10_deployment_package/security/: neural_privacy_config.json  tls_config.json
hipaa_compliance/audit_trail/: 1754449314.json
monitoring/: clinical_rules.yml  prometheus.yml
src/bci_agent_bridge/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_core.py  test_decoders.py  test_generation10_complete_system.py  test_generation4_research.py  test_generation5_unified.py  test_generation6_autonomous.py  test_generation7_consciousness.py  test_generation8_complete_system.py  test_generation9_complete_system.py  test_integration.py  test_monitoring.py  test_optimized_bridge.py  test_performance.py  test_privacy.py  test_research_modules.py  test_security.py  test_utils.py
(+96 files in other folders)
